--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,28 +4,12 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 
-<ion-header >
-
-  <ion-navbar color="primary">
-    <ion-title class="white">{{loggedUser.nombre}}</ion-title>
-
-    <ion-buttons end>
-      <button ion-button icon-only (click)="salir()">
-        <ion-icon name="log-out"></ion-icon>
-      </button>
-    </ion-buttons>
-
-  </ion-navbar>
-
-</ion-header>
 -->
 <ion-header>
 
   <ion-navbar hideBackButton>
   	<ion-buttons left>
-		<button ion-button navPop>
-			<ion-icon name="play"></ion-icon >
-		</button>
+		
     </ion-buttons>
 
     <ion-title>{{loggedUser.nombre}}</ion-title>
@@ -45,7 +29,7 @@
 
         <ion-list>
           <ion-list-header>
-            Establecimeintos
+            Seleccione establecimiento
           </ion-list-header>
       
           <ion-item *ngFor="let est of establishmentsList">
