--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -103,7 +103,7 @@
                       <!-- 1.- texto number -->
                       <ion-item *ngSwitchCase=1>
                         <ion-label floating>Escriba su respuesta (Número)</ion-label>
-                        <ion-input type="number" [(ngModel)]="answer.childNumber"></ion-input>
+                        <ion-input type="number" [(ngModel)]="answer.childNumber" (change)="childNumberChanged()"></ion-input>
                       </ion-item>
 
                       <!-- 2.- radio button  -->
@@ -127,7 +127,7 @@
                                       <!-- 4.- texto abierto -->
                                       <ion-item *ngSwitchCase=4>
                                         <ion-label floating>Escriba su respuesta (Texto)</ion-label>
-                                        <ion-textarea type="text" [(ngModel)]="answer.secondChildText"></ion-textarea>
+                                        <ion-textarea type="text" [(ngModel)]="answer.secondChildText" (change)="secondChildTextChanged()"></ion-textarea>
                                       </ion-item>
                                     </div>
                                   </ion-col>
@@ -143,7 +143,7 @@
                       <!-- 3.- combo box  -->
                       <ion-item *ngSwitchCase=3>
                         <ion-label>Seleccione Opciones</ion-label>
-                        <ion-select [(ngModel)]="answer.childOptions" multiple="true" cancelText="Cancel" okText="Okay" (ionChange)="optionChanged()">
+                        <ion-select [(ngModel)]="answer.childOptions" multiple="true" cancelText="Cancel" okText="Okay" (ionChange)="childOptionsChanged()">
                           <ion-option *ngFor="let optChild of opt.respuestas" [value]="optChild">{{optChild.enunciado}}</ion-option>
                         </ion-select>
                       </ion-item>
@@ -151,7 +151,7 @@
                       <!-- 4.- texto abierto -->
                       <ion-item *ngSwitchCase=4>
                         <ion-label floating>Escriba su respuesta (Texto)</ion-label>
-                        <ion-textarea type="text" [(ngModel)]="answer.childText"></ion-textarea>
+                        <ion-textarea type="text" [(ngModel)]="answer.childText" (change)="childTextChanged()"></ion-textarea>
                       </ion-item>
 
                       <!-- 5.- opcion multiple con pondereaciones -->
@@ -164,7 +164,7 @@
                           </ion-col>
                           <ion-col>
                             <div>
-                              <ion-input placeholder="0" [(ngModel)]="answer.childMap[opt.id]"></ion-input>
+                              <ion-input placeholder="0" type="number" [(ngModel)]="answer.childMap[opt.id]" (change)="childMapChanged()"></ion-input>
                             </div>
                           </ion-col>
                         </ion-row>
@@ -220,7 +220,7 @@
         <ion-label floating>Escriba su respuesta (Texto)</ion-label>
         <ion-textarea elastic autosize type="text" [(ngModel)]="answer.text"></ion-textarea>
       </ion-item>
-      <button class="siguiente" ion-button block (click)="nextQuestion()" *ngIf="answer.text != null && answer.number != ''">Siguiente</button>
+      <button class="siguiente" ion-button block (click)="nextQuestion()" *ngIf="answer.text != null && answer.text != ''">Siguiente</button>
     </div>
 
     <!-- 5.- opcion multiple con pondereaciones -->
