image question validation

--- a/src/pages/survey/survey.html
+++ b/src/pages/survey/survey.html
@@ -191,7 +191,7 @@
                       <ion-item-group *ngSwitchCase=6>
                         <ion-item>
                           <ion-label floating>Escriba su respuesta (Texto)</ion-label>
-                          <ion-textarea type="text" [(ngModel)]="answer.imageText"></ion-textarea>
+                          <ion-textarea type="text" [(ngModel)]="answer.imageText" (input)="imageTextChanged()"></ion-textarea>
                         </ion-item>
                         <ion-item>
                           <button class="siguiente" ion-button block (click)="getPicture()">Tomar Foto</button>
@@ -203,9 +203,6 @@
 
                     </div>
                     </ion-col>
-
-                  
-
 
                 </ion-row>
               </ion-item-group>
